# WorkPlanHandler

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 01-survey.md  02-mvp-proposal.md  guide.md  references.md
docs/phase2/: 00-overview-and-decisions.md  01-data-model-and-events.md  02-engine.md  03-verifiers.md  04-planner-and-executor.md  05-langgraph-adapter-and-persistence.md  README.md
docs/phase3/: 01-mcp-tool-integration-design.md  02-mcp-bugfix-plan.md
examples/: demo_e2e.py  demo_layered.py  demo_llm_injection.py  demo_mock.py  demo_research_llm.py  demo_resume.py  quickstart_integration.py
examples/integrations/: README.md  langgraph_commender.py  mcp_gatekeeper.py  mcp_gatekeeper_modes.py
scripts/: m6_real_llm_probe.py  verify_clean_install.sh
src/workplan/: __init__.py  engine.py  errors.py  events.py  models.py  protocols.py
src/workplan/adapters/: __init__.py  langgraph.py  mcp_server.py
src/workplan/audit/: __init__.py  render.py
src/workplan/executors/: __init__.py  callable.py  mock.py
src/workplan/planners/: __init__.py  external.py  llm_planner.py  mock.py
src/workplan/stores/: __init__.py  json_store.py
src/workplan/verifiers/: __init__.py  base.py  builtin_checks.py  human_gate.py  llm_judge.py  mock.py  programmatic.py
tests/: conftest.py  stub_chat_model.py  test_adapter_langgraph.py  test_audit.py  test_builtin_checks.py  test_engine.py  test_executors.py  test_external_planner.py  test_import_boundaries.py  test_json_store.py  test_llm_judge.py  test_llm_planner.py  test_mcp_gatekeeper_config.py  test_mcp_server.py  test_mcp_server_http.py  test_public_api.py  test_quickstart.py  test_real_llm_probe.py  test_research_e2e.py  test_verifiers.py
