[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "workplan"
version = "0.1.0.dev0"
description = "Framework-agnostic 長任務執行管理模組:照計劃推進、逐階段驗收、失敗重試/重規劃、中斷續跑"
requires-python = ">=3.11"
dependencies = []          # 核心零依賴(D9)

[project.optional-dependencies]
langgraph = ["langgraph>=1.0", "langgraph-checkpoint-sqlite"]
# llm:預設接 Claude(Anthropic)開箱即用。改接 OpenAI / Google 等 provider
# 時,自行安裝對應 langchain 整合(如 langchain-openai / langchain-google-genai),
# 再以 model_name="openai:..." 走 init_chat_model,或直接把該 provider 的
# ChatModel 實例傳給 LLMPlanner(model=...) / LLMJudgeVerifier(model=...)。
llm = ["langchain>=0.3", "langchain-anthropic"]
dev = ["pytest>=8", "ruff>=0.4", "pre-commit>=4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["slow: 跑得慢的測試(subprocess 級),日常以 -m 'not slow' 跳過"]

[tool.ruff.lint]
select = ["E", "F", "I"]
